--- a/pepeizqs deals web/Pages/Componentes/Admin/Recompensas.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Recompensas.razor
@@ -48,7 +48,7 @@
 else
 {
 	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
-		<div style="padding: 5px; text-align: left;">
+		<div style="margin-bottom: 10px; text-align: left;">
 			<label>Buscar Juego</label>
 		</div>
 		<div style="width: 100%;">
